--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,5 @@
 @use "sass:color";
+@use 'variables' as vars;
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 html, body, h1, h2, h3, h4, h5, h6, p, main, div, span, a, footer, header, dd, dt, dl, ol, ul, li, table, article, aside, span, form, th, tr, td, caption {
     margin: 0;
@@ -15,6 +16,6 @@ html, body, h1, h2, h3, h4, h5, h6, p, main, div, span, a, footer, header, dd, d
     font-style: normal;
 }
 body {
-  background: #e8d3f2;
+  background: vars.$body-color;
   background: linear-gradient(90deg, rgba(232, 211, 242, 1) 8%, rgba(235, 240, 235, 1) 94%);
 }
