Реализованы фильтры, реализуем категории

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,1 +1,8 @@
-$body-color: #e8d3f2;
+@use "sass:color";
+$body-color: #121212;
+$card-color: #1E1E1E;
+$gray-text: #B0B0B0;
+$supporting-golden: rgba(216, 197, 118, 1);
+$supporting-golden-lighten: #F5DFA2;
+$supporting-golden-darken: #A67C00; 
+$block-covering-color: color.adjust($body-color, $lightness:10%);
