--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -6,3 +6,4 @@ $supporting-golden: rgba(216, 197, 118, 1);
 $supporting-golden-lighten: #F5DFA2;
 $supporting-golden-darken: #A67C00; 
 $block-covering-color: color.adjust($body-color, $lightness:10%);
+$background-gradient: linear-gradient(135deg, #f1e3b3, #d6b95f);
