--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -29,21 +29,22 @@ a {
 }
 button {
   font-family: "Fira Sans", sans-serif;
-  background: vars.$supporting-golden;
+  background: vars.$background-gradient;
   border: none;
   border-radius: 10px;
-  padding: 10px 20px;
+  padding: 10px;
   font-size: 16px;
   font-weight: 500;
   color: vars.$body-color;
   transition: background 0.3s ease, transform 0.2s ease;
 
   &:hover, &:focus-within {
-    background: vars.$supporting-golden_darken;
+    background: vars.$background-gradient-active;
     transform: scale(1.05);
   }
   &:active {
     transform: scale(0.97);
+    background: vars.$background-gradient-active;
   }
 }
 
